force-app/main/default/objects/BSST__c/BSST__c.object-meta.xml
<CustomObject>
    <label>Sales Team</label>
    <nameField>
        
        <label>Name</label>
        
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Sales Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>