force-app/main/default/objects/BSST__c/fields/A_Rate__c.field-meta.xml
<CustomField>
    <fullName>A_Rate__c</fullName>
    <label>A Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>