force-app/main/default/objects/BSST__c/fields/A_Sales_kW__c.field-meta.xml
<CustomField>
    <fullName>A_Sales_kW__c</fullName>
    <label>A Sales (kW)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>