force-app/main/default/objects/BSST__c/fields/B_Rate__c.field-meta.xml
<CustomField>
    <fullName>B_Rate__c</fullName>
    <label>B Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>