force-app/main/default/objects/BSST__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission from Loans</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>