force-app/main/default/objects/BSST__c/fields/commission_cap__c.field-meta.xml
<CustomField>
    <fullName>commission_cap__c</fullName>
    <label>Loan Cap</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>