force-app/main/default/objects/BSST__c/fields/CSA_Threshold__c.field-meta.xml
<CustomField>
    <fullName>CSA_Threshold__c</fullName>
    <label>CSA Threshold</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>