force-app/main/default/objects/BSST__c/fields/Finance_Option_Freedom__c.field-meta.xml
<CustomField>
    <fullName>Finance_Option_Freedom__c</fullName>
    <formula>Partner__r.Finance_Option_Freedom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Option Freedom?</label>
    <type>Checkbox</type>
</CustomField>