force-app/main/default/objects/BSST__c/fields/Individual_Commission__c.field-meta.xml
<CustomField>
    <fullName>Individual_Commission__c</fullName>
    <label>Individual Commission</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>