force-app/main/default/objects/BSST__c/fields/Individual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Individual_Sales__c</fullName>
    <label>Individual Sales (kW)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>