force-app/main/default/objects/BSST__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <label>Organization</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Sales Team</relationshipLabel>
    <relationshipName>Boston_Solar_Sales_Team</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>