force-app/main/default/objects/BSST__c/fields/Rate_Key__c.field-meta.xml
<CustomField>
    <fullName>Rate_Key__c</fullName>
    <label>Rate Key</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>