force-app/main/default/objects/BSST__c/fields/Total_Loans__c.field-meta.xml
<CustomField>
    <fullName>Total_Loans__c</fullName>
    <label>Total Loans Made</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>