force-app/main/default/objects/BSST__c/fields/Total_Principal_Loaned__c.field-meta.xml
<CustomField>
    <fullName>Total_Principal_Loaned__c</fullName>
    <label>Total Principal Loaned</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>