force-app/main/default/objects/BSST__c/fields/Total_systems_kW__c.field-meta.xml
<CustomField>
    <fullName>Total_systems_kW__c</fullName>
    <label>Total kWs Installed</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>