force-app/main/default/objects/BSST__c/fields/Update_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Update_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Trigger</label>
    <type>Checkbox</type>
</CustomField>